[package]
name = "mv-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["blocking", "cookies"] }
scraper = "0.12.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } 
tokio = "1"
chrono = "0.4" 
serde = "1"
dotenv = "0.15.0"
futures = "0.3"
